<resources>
    <string name="app_name" translatable="false">Photo Manager</string>
    <string name="title_activity_view__all">View_All</string>

    <string name="title_activity_file_load">FileLoad</string>
    <string name="picture_fragment">PICTURE</string>
    <string name="video_fragment_label">VIDEO</string>
    <string name="album_fragment_label">ALBUM</string>
    <string name="view_all_picture_title">PICTURE</string>

    <string name="favourite">favourite</string>
    <string name="camera">camera</string>
    <string name="view_by_date">View by date</string>

    <string name="save_image_fail">FAILED TO SAVE THE IMAGE</string>
    <string name="save_image_success">IMAGE IS SAVED</string>

    <string name="slideshow">Slideshow</string>
    <string name="loading">Loading...</string>
    <string name="delete_image_success">IMAGE IS DELETED</string>
    <string name="delete_image_fail">FAILED TO DELETE IMAGE</string>
    <string name="album_size_place_holder" translatable="false">0</string>
    <string name="album_name_place_holder">Album name place holder</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="album">Album</string>
    <string name="create_album">Create album</string>
    <string name="title">Title...</string>
    <string name="text_here">Text here...</string>
    <string name="album_name_empty_error">album\'s name can\'t be empty</string>
    <string name="album_detail">Album detail</string>
    <string name="add_to_album">Add to album</string>
    <string name="accept">accept</string>
    <string name="select_all">Select all</string>
    <string name="add_image_sucess">Add image successfully</string>
    <string name="remove_from_album_success">Remove from album sucessfully</string>
    <string name="set_wallpaper">SET WALLPAPER</string>
    <string name="ask_set_wallpaper">do you want to make this picture your wallpaper?</string>
    <string name="set_wallpaper_fail">Set wallpaper fail</string>
    <string name="set_wallpaper_success">image is set as device wallpaper</string>
    <string name="share_fail">FAILED TO SHARE THIS IMAGE</string>
    <string name="share_image">SHARE IMAGE</string>
    <string name="delete_album">Delete album</string>
    <string name="delete_album_success">Album is deleted</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="welcome_to_security_folder">WELCOME TO SECURITY FOLDER</string>
    <string name="please_set_your_first_password">PLEASE SET YOUR FIRST PASSWORD</string>
    <string name="enter_your_password">enter your password</string>
    <string name="enter_your_password_again">enter your password again</string>
    <string name="please_set_your_password">PLEASE SET YOUR PASSWORD</string>
    <string name="secure_folder">Secure folder</string>
    <string name="empty_password_error">password can\'t be empty</string>
    <string name="repassword_not_match_error">repassword must match password</string>
    <string name="save_password_error">Can\'t save password. Please try again</string>
    <string name="decrypt_password_error">Can\'t decrypt your password</string>
    <string name="incorrect_password">incorrect password</string>
    <string name="view_all_video_title">VIDEO</string>

    <string name="change_password">Change password</string>
    <string name="delete">Delete</string>
    <string name="move_to_secure_folder_success">MOVED TO SECURE FOLDER</string>
    <string name="move_to_secure_folder_fail">FAILED TO MOVE TO SECURE FOLDER</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="enter_your_new_password_again">Enter your new password again</string>
    <string name="old_password_retrieve_error">Your old password storage has some issue! Please leave old password input empty !</string>
    <string name="wrong_old_password">Your old password is incorrect</string>
    <string name="wrong_renew_password">Your re-enter new password is not matched</string>
    <string name="save_new_password_success">New password is saved</string>
    <string name="save_new_password_fail">Can\'t save your new password</string>
    <string name="multiple_deletion">Multiple deletion</string>
    <string name="multiple_deletion_message">Do you want to delete multiple item?</string>

    <string name="brush_size_max" translatable="false">102</string>
    <string name="brush_size_min" translatable="false">4</string>
    <string name="brush_opacity_max" translatable="false">100</string>
    <string name="brush_opacity_min" translatable="false">0</string>
    <string name="brush_size">Size</string>
    <string name="brush_opacity">Opacity</string>
    <string name="brush_color">Color</string>

    <string name="text_holder">Edit text here...</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>

    <string name="vp_menu_detail">Photo details</string>
    <string name="vp_menu_wallpaper">Set as wallpaper</string>
    <string name="vp_menu_security_folder">Move to security folder</string>
    <string name="save_image_dont_support"><![CDATA[Don\'t support save image with Android version >= 10]]></string>
    <string name="add_photo_to_album">Add photo to album</string>
    <string name="add_video_to_album">Add video to album</string>
    <string name="date">Date</string>
    <string name="Name">Name</string>
    <string name="Storage">Storage</string>
    <string name="change_layout">Change layout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="setting_fragment_label">SETTINGS</string>
    <string name="settings">SETTINGS</string>
    <string name="themes">Themes</string>
    <string name="purple_primary">Purple primary</string>
    <string name="orange_primary">Orange primary</string>
    <string name="green_primary">Green primary</string>
    <string name="set_theme_success">Theme is set. It will be applied when restart app</string>
    <string name="video_detail">Video detail</string>
    <string name="video_delete">Delete</string>
    <string name="delete_video_success">VIDEO DELETED</string>
    <string name="delete_video_fail">VIDEO DELETE FAILED</string>
    <string name="face_grouping">Face grouping</string>

</resources>