<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favourite"
        android:title="@string/favourite"
        android:icon="@drawable/ic_baseline_favorite_24"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/camera"
        android:title="@string/camera"
        android:icon="@drawable/ic_baseline_camera_24"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/secure_folder"
        android:title="@string/secure_folder"
        android:icon="@drawable/private_folder_icon"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/slideshow"
        android:title="@string/slideshow"
        android:icon="@drawable/slideshow_icon_black"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/view_by_date"
        android:title="@string/view_by_date"
        />
    <item
        android:id="@+id/change_layout"
        android:title="@string/change_layout"
        />

    <item
        android:id="@+id/face_grouping"
        android:title="@string/face_grouping"
        />
</menu>