<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/undo_btn"
        android:title="@string/undo"
        android:icon="@drawable/undo_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/redo_btn"
        android:title="@string/redo"
        android:icon="@drawable/redo_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/share_btn"
        android:title="@string/share"
        android:icon="@drawable/share_icon"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/save_btn"
        android:title="@string/save"
        android:icon="@drawable/save_icon"
        app:showAsAction="ifRoom" />
</menu>