<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_photo"
        android:title="@string/add_photo_to_album"
        android:icon="@drawable/add_photo_icon"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_video"
        android:title="@string/add_video_to_album"
        android:icon="@drawable/add_video_icon"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete_album"
        android:title="@string/delete_album"
        android:icon="@drawable/delete_icon_red"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/slideshow"
        android:title="@string/slideshow"
        android:icon="@drawable/slideshow_icon_black"
        app:showAsAction="ifRoom"
        />
</menu>