<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:colorPickerView="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/brush_size"/>
    <com.google.android.material.slider.Slider
        android:id="@+id/eraser_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:valueFrom="@string/brush_size_min"
        android:valueTo="@string/brush_size_max"
        android:value="@string/brush_size_max"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageButton
                android:id="@+id/cancel_button"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginHorizontal="@dimen/button_horizontal_margin"
                android:src="@drawable/cancel_icon"
                android:background="@drawable/pe_button"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_marginVertical="@dimen/button_vertical_margin"
                />
            <ImageButton
                android:id="@+id/apply_button"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginHorizontal="@dimen/button_horizontal_margin"
                android:src="@drawable/check_icon"
                android:background="@drawable/pe_button"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_marginVertical="@dimen/button_vertical_margin"
                />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>