<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SecureFolder.SFFirstAccessFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:src="@drawable/back_icon_black"
                android:background="@drawable/pe_button"

                app:layout_columnWeight="1"
                android:layout_marginVertical="@dimen/button_vertical_margin"
                />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:text="@string/welcome_to_security_folder"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:text="@string/please_set_your_password"/>


        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:inputType="textPassword"
            android:hint="@string/enter_your_password"
            />

        <EditText
            android:id="@+id/repassword_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:inputType="textPassword"
            android:hint="@string/enter_your_password_again"
            />

        <TextView
            android:id="@+id/error_message"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textSize="@dimen/text_size"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            />

        <ImageButton
            android:id="@+id/ok_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_gravity="right"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/arrow_forward_black"
            android:background="@drawable/pe_button"
            android:layout_marginVertical="@dimen/button_vertical_margin"
            />
    </LinearLayout>
</RelativeLayout>